--- a/css/styles.css
+++ b/css/styles.css
@@ -68,14 +68,7 @@ body {
     color: #666;
     overflow-x: hidden !important;
 }
-p {
-    font-family: 'Barlow', sans-serif;
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 1.75em;
-    color: #666;
-    margin-bottom: 20px;
-}
+
 h1,
 h2,
 h3,
